--- a/css/Style.css
+++ b/css/Style.css
@@ -5,7 +5,7 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0px 0px 25px 0px;
-  background-image: url('https://wallpaperaccess.com/full/4334829.jpg');
+  background-image: url('../pics/Background_Pic.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -28,7 +28,7 @@ content{
   
   width: 800px;
   /* هنا تعدل لون الخلفية */
-  background-color: purple;
+  background-color: rgba(61, 171, 244, 0.303);;
   display: flex;
   flex-direction: column;
   padding: 0 90px;
