--- a/css/Style.css
+++ b/css/Style.css
@@ -7,14 +7,17 @@
     background-image: url(../assets/pics/716160.jpg);
     min-height: 100%;
 }
+
 .parallax2 {
     background-image: url(../assets/pics/GodOfWar3.jpg);
     min-height: 100%;
 }
+
 .parallax3 {
     background-image: url(../assets/pics/GodOfWar4.jpg);
     min-height: 100%;
 }
+
 .parallax4 {
     background-image: url(../assets/pics/GodOfWar5.jpg);
     min-height: 100%;
@@ -33,7 +36,7 @@
     position: absolute;
     color: #fff;
     font-size: 500%;
-    top:50%;
+    top: 50%;
     width: 100%;
     text-transform: uppercase;
     letter-spacing: 20px;
@@ -41,8 +44,8 @@
     cursor: pointer;
 }
 
-.head:hover{
-    color:transparent;
+.head:hover {
+    color: transparent;
 }
 
 
@@ -53,7 +56,7 @@ section {
 
 }
 
-footer{
+footer {
     width: 100%;
     background-color: #323232;
     color: #f2f2f2;
@@ -63,8 +66,8 @@ footer{
     padding-bottom: 1vh;
 }
 
-@media (max-width:800px) {
-    .head{
+@media (max-width: 800px) {
+    .head {
         font-size: 200%;
     }
 
@@ -119,6 +122,7 @@ content {
     font-style: normal;
     letter-spacing: 1px;
 }
+
 .Section--title {
     font-family: "Gilroy";
     font-size: 2.5em;
@@ -129,6 +133,7 @@ content {
     font-style: normal;
     letter-spacing: 1px;
 }
+
 .Parallax--title {
     font-family: "Gilroy";
 
@@ -136,7 +141,7 @@ content {
     position: absolute;
     color: #fff;
     font-size: 500%;
-    top:45%;
+    top: 45%;
     width: 100%;
     text-transform: uppercase;
     letter-spacing: 20px;
@@ -146,6 +151,7 @@ content {
     font-style: normal;
 
 }
+
 .Section--paragraph {
     font-family: "Gilroy";
     font-size: 1.5em;
@@ -156,6 +162,7 @@ content {
     font-style: normal;
     letter-spacing: 1px;
 }
+
 .about {
     margin: 30px;
     width: 700px;
@@ -195,9 +202,11 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
     background-color: #121212;
 }
-.bgBlack{
+
+.bgBlack {
     background-color: #121212;
 }
+
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -341,91 +350,93 @@ url("assets/fonts/ShareTechMono-Regular.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
+
 .footer-clean {
-    padding:50px 0;
+    padding: 50px 0;
     background-color: #121212;
     color: #c0c0c0;
 }
 
 .footer-clean h3 {
-    margin-top:0;
-    margin-bottom:12px;
-    font-weight:bold;
-    font-size:16px;
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .footer-clean ul {
-    padding:0;
-    list-style:none;
-    line-height:1.6;
-    font-size:14px;
-    margin-bottom:0;
+    padding: 0;
+    list-style: none;
+    line-height: 1.6;
+    font-size: 14px;
+    margin-bottom: 0;
 }
 
 .footer-clean ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.8;
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
 }
 
 .footer-clean ul a:hover {
-    opacity:1;
+    opacity: 1;
 }
 
 .footer-clean .item.social {
-    text-align:right;
+    text-align: right;
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
     .footer-clean .item {
-        text-align:center;
-        padding-bottom:20px;
+        text-align: center;
+        padding-bottom: 20px;
     }
 }
 
 @media (max-width: 768px) {
     .footer-clean .item.social {
-        text-align:center;
+        text-align: center;
     }
 }
 
 .footer-clean .item.social > a {
-    font-size:24px;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    border:1px solid #ccc;
-    margin-left:10px;
-    margin-top:22px;
-    color:inherit;
-    opacity:0.75;
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    margin-left: 10px;
+    margin-top: 22px;
+    color: inherit;
+    opacity: 0.75;
 }
 
 .footer-clean .item.social > a:hover {
-    opacity:0.9;
+    opacity: 0.9;
 }
 
-@media (max-width:991px) {
+@media (max-width: 991px) {
     .footer-clean .item.social > a {
-        margin-top:40px;
+        margin-top: 40px;
     }
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
     .footer-clean .item.social > a {
-        margin-top:10px;
+        margin-top: 10px;
     }
 }
 
 .footer-clean .copyright {
-    margin-top:14px;
-    margin-bottom:0;
-    font-size:13px;
-    opacity:0.6;
+    margin-top: 14px;
+    margin-bottom: 0;
+    font-size: 13px;
+    opacity: 0.6;
 }
+
 .wrap {
     height: 100%;
     display: flex;
@@ -446,12 +457,12 @@ url("assets/fonts/ShareTechMono-Regular.ttf") format("truetype");
     background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
     border: none;
     border-radius: 1000px;
-    box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+    box-shadow: 12px 12px 24px rgba(79, 209, 197, .64);
     transition: all 0.3s ease-in-out 0s;
     cursor: pointer;
     outline: none;
     position: absolute;
-    bottom: 20% ;
+    bottom: 20%;
     padding: 10px;
 
 }
@@ -462,7 +473,7 @@ buttonl::before {
     min-width: calc(300px + 12px);
     min-height: calc(60px + 12px);
     border: 6px solid #00FFCB;
-    box-shadow: 0 0 60px rgba(0,255,203,.64);
+    box-shadow: 0 0 60px rgba(0, 255, 203, .64);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -482,7 +493,8 @@ buttonl:hover::before, buttonl:focus::before {
 
 buttonl::after {
     content: '';
-    width: 30px; height: 30px;
+    width: 30px;
+    height: 30px;
     border-radius: 100%;
     border: 6px solid #00FFCB;
     position: absolute;
@@ -510,6 +522,7 @@ buttonl:hover::after, buttonl:focus::after {
         opacity: 0;
     }
 }
+
 .player {
     border-radius: 10px;
     overflow: hidden;
@@ -519,10 +532,11 @@ buttonl:hover::after, buttonl:focus::after {
     position: absolute;
     bottom: 60%;
     left: 36%;
-    align-items:center;
+    align-items: center;
 
 }
-span{
+
+span {
     position: absolute;
     display: inline-flex;
     width: 180px;
@@ -530,10 +544,11 @@ span{
     margin: 0 0;
     perspective: 1000px;
     top: 3%;
-    left:3%;
+    left: 3%;
 
 }
-span a{
+
+span a {
     font-size: 19px;
     letter-spacing: 1px;
     transform-style: preserve-3d;
@@ -542,8 +557,9 @@ span a{
     font-family: 'Montserrat', sans-serif;
 
 }
+
 span a:before,
-span a:after{
+span a:after {
     position: absolute;
     content: "< Back";
     height: 55px;
@@ -555,16 +571,19 @@ span a:after{
     box-sizing: border-box;
     border-radius: 5px;
 }
-span a:before{
+
+span a:before {
     color: #fff;
     background: #121212;
     transform: rotateY(0deg) translateZ(25px);
 }
-span a:after{
+
+span a:after {
     color: #121212;
     background: #ffffff;
     transform: rotateX(90deg) translateZ(25px);
 }
-span a:hover{
+
+span a:hover {
     transform: translateZ(-25px) rotateX(-90deg);
 }
