--- a/css/Style.css
+++ b/css/Style.css
@@ -441,7 +441,7 @@ body {
 .buttonl {
     min-width: 300px;
     min-height: 60px;
-    font-family: 'ShareTechMono-Regular';
+    font-family: 'Share Tech Mono';
     font-size: 22px;
     text-transform: uppercase;
     letter-spacing: 1.3px;
